--- a/renohome-dto/pom.xml
+++ b/renohome-dto/pom.xml
@@ -12,5 +12,11 @@
 
     <artifactId>renohome-dto</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
