--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -123,12 +128,6 @@
                 <groupId>com.renohome</groupId>
                 <artifactId>renohome-controller</artifactId>
                 <version>${renohome-controller.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.renohome</groupId>
-                        <artifactId>renohome-service</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
             <dependency>
