--- a/renohome-server/src/main/resources/application.yml
+++ b/renohome-server/src/main/resources/application.yml
@@ -2,6 +2,10 @@ config:
   serviceName: renohome
   timeZone: America/Montreal
 
+mcp:
+  zipkin:
+    url: ${mcp.zipkin}
+
 spring:
   batch:
     job:
@@ -41,6 +45,8 @@ server:
 
 logging:
   level:
+    mcp:
+      cloudtrace: INFO
     root: INFO
     # Hides HHH000424: Disabling contextual LOB creation as createClob() method threw error
     org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: WARN
