--- a/renohome-contractor/renohome-contractor-domain/pom.xml
+++ b/renohome-contractor/renohome-contractor-domain/pom.xml
@@ -15,7 +15,7 @@
         <!-- Generic -->
         <dependency>
             <groupId>com.renohome</groupId>
-            <artifactId>renohome-generic</artifactId>
+            <artifactId>renohome-generic-domain</artifactId>
         </dependency>
 
         <!-- Testing -->
