--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,16 @@
         <skip-integration-test>false</skip-integration-test>
 
         <!-- RenoHome -->
-        <renohome-generic.version>1.0-SNAPSHOT</renohome-generic.version>
+        <renohome-generic-domain.version>1.0-SNAPSHOT</renohome-generic-domain.version>
+        <renohome-generic-exceptions.version>1.0-SNAPSHOT</renohome-generic-exceptions.version>
+        <renohome-generic-controller.version>1.0-SNAPSHOT</renohome-generic-controller.version>
+        <renohome-generic-security.version>1.0-SNAPSHOT</renohome-generic-security.version>
+        <renohome-generic-tracking.version>1.0-SNAPSHOT</renohome-generic-tracking.version>
+
         <renohome-contractor-domain.version>1.0-SNAPSHOT</renohome-contractor-domain.version>
+        <renohome-contractor-dto.version>1.0-SNAPSHOT</renohome-contractor-dto.version>
+        <renohome-contractor-service.version>1.0-SNAPSHOT</renohome-contractor-service.version>
+        <renohome-contractor-controller.version>1.0-SNAPSHOT</renohome-contractor-controller.version>
 
 
         <renohome-domain.version>1.0-SNAPSHOT</renohome-domain.version>
@@ -113,8 +121,32 @@
             <!-- RenoHome Systems -->
             <dependency>
                 <groupId>com.renohome</groupId>
-                <artifactId>renohome-generic</artifactId>
-                <version>${renohome-generic.version}</version>
+                <artifactId>renohome-generic-domain</artifactId>
+                <version>${renohome-generic-domain.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-generic-exceptions</artifactId>
+                <version>${renohome-generic-exceptions.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-generic-controller</artifactId>
+                <version>${renohome-generic-controller.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-generic-tracking</artifactId>
+                <version>${renohome-generic-tracking.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-generic-security</artifactId>
+                <version>${renohome-generic-security.version}</version>
             </dependency>
 
             <dependency>
@@ -122,6 +154,31 @@
                 <artifactId>renohome-contractor-domain</artifactId>
                 <version>${renohome-contractor-domain.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-contractor-dto</artifactId>
+                <version>${renohome-contractor-dto.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-contractor-service</artifactId>
+                <version>${renohome-contractor-service.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.renohome</groupId>
+                        <artifactId>renohome-contractor-domain</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.renohome</groupId>
+                <artifactId>renohome-contractor-controller</artifactId>
+                <version>${renohome-contractor-controller.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>com.renohome</groupId>
