--- a/renohome-contractor/renohome-contractor-dto/pom.xml
+++ b/renohome-contractor/renohome-contractor-dto/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>renohome-contractor-dto</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+    </dependencies>
 </project>
