--- a/renohome-domain/pom.xml
+++ b/renohome-domain/pom.xml
@@ -16,7 +16,7 @@
         <!-- Generic -->
         <dependency>
             <groupId>com.renohome</groupId>
-            <artifactId>renohome-generic</artifactId>
+            <artifactId>renohome-generic-domain</artifactId>
         </dependency>
 
         <!-- Testing -->
