Added distributed Tracking - Added tracking to be distributed - Configured service name for zipkin to show - Added remote call from Home to Contractor

--- a/renohome-home/renohome-home-server/src/main/resources/application-local.yml
+++ b/renohome-home/renohome-home-server/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 server:
   port: 8484
 
+external:
+  api:
+    contractorUrl: http://127.0.0.1:8485/renohome
+
 mcp:
   zipkin:
     url: http://127.0.0.1:9411/api/v2/spans
