--- a/renohome-home/renohome-home-service/pom.xml
+++ b/renohome-home/renohome-home-service/pom.xml
@@ -27,5 +27,11 @@
             <groupId>com.renohome</groupId>
             <artifactId>renohome-home-dto</artifactId>
         </dependency>
+
+        <!-- Spring Web -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
